<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Update">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mainUpdateLayout"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="7dp">

                <TextView
                    android:id="@+id/updateLog"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Update Log:"
                    android:textColor="#ffffffff"
                    android:textSize="23dp" />

                <TextView
                    android:id="@+id/updateinfotxt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/custom_blue"
                    android:textSize="15dp"
                    android:fontFamily="@font/lato_bold"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_bg"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/downloadloader"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:id="@+id/txtDownloadAndInstall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:text="@string/downloadandinstall"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato_bold"
                            android:textSize="23dp" />

                        <TextView
                            android:id="@+id/upcomingVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15.0dip"
                            android:layout_toRightOf="@id/txtDownloadAndInstall"
                            android:gravity="center"
                            android:fontFamily="@font/lato_bold"
                            android:textColor="#009688"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/button_bg"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/continuewithcurrentversion"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:id="@+id/continueWithCurrentloaderTXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:text="@string/con_with_curr_version"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato_bold"
                            android:textSize="23dp" />

                        <TextView
                            android:id="@+id/currentversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15.0dip"
                            android:layout_toRightOf="@id/continueWithCurrentloaderTXT"
                            android:gravity="center"
                            android:textColor="#FFFF0000"
                            android:fontFamily="@font/lato_bold"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/lato_regular"
                    android:id="@+id/updateloadererrorinfo"/>
            </LinearLayout>

        </ScrollView>




    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainUpdateLayout"
        app:layout_constraintVertical_bias="0.945">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinslight"
            android:text="@string/splash_copyright_txt"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>